VeryHigh priority loads are actually loading at VeryLow priority https://bugs.webkit.org/show_bug.cgi?id=203423 <rdar://problem/56621789>

Patch by Benjamin Nham <nham@apple.com> on 2019-11-13
Reviewed by Antti Koivisto.

There are two issues with the way we translate ResourceLoadPriority to
CFURLRequestPriority:

1. We call _CFNetworkHTTPConnectionCacheSetLimit and set 1 too few
priority levels. This means VeryHigh priority loads are actually out
of bounds, which causes CFNetwork to set the priority level back to 0
in HTTPConnectionCacheEntry::_prepareNewRequest. After this patch we'll
call _CFNetworkHTTPConnectionCacheSetLimit with the correct number of
levels.

2. _CFNetworkHTTPConnectionCacheSetLimit doesn't work for NSURLSession
right now (<rdar://problem/56621205>), so we have to map to the default
number of CFURLRequestPriority levels, which is 4. Right now we have 5
ResourceLoadPriority levels, so there will be some aliasing involved.
After this patch VeryLow gets a priority of -1 and Low gets a priority
of 0, but due to the aforementioned clamping behavior both VeryLow and
Low will effectively both have a CFURLRequestPriority of 0.

Source/WebCore:

* platform/network/cf/ResourceRequestCFNet.cpp:
(WebCore::initializeMaximumHTTPConnectionCountPerHost):
(WebCore::initializeHTTPConnectionSettingsOnStartup):
* platform/network/cf/ResourceRequestCFNet.h:
(WebCore::toResourceLoadPriority):
(WebCore::toPlatformRequestPriority):

Source/WebKit:

* NetworkProcess/cocoa/NetworkProcessCocoa.mm:
(WebKit::initializeNetworkSettings):

Canonical link: https://commits.webkit.org/217471@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252431 268f45cc-cd09-0410-ab3c-d52691b4dbfc