Source/WebCore/platform/network/cf/ResourceRequestCFNet.h
@@ -40,17 +40,17 @@ CFURLRequestRef cfURLRequest(const ResourceRequest&);
 
 inline ResourceLoadPriority toResourceLoadPriority(CFURLRequestPriority priority)
 {
+    // FIXME: switch VeryLow back to 0 priority when CFNetwork fixes <rdar://problem/56621205>
     switch (priority) {
     case -1:
-    case 0:
         return ResourceLoadPriority::VeryLow;
-    case 1:
+    case 0:
         return ResourceLoadPriority::Low;
-    case 2:
+    case 1:
         return ResourceLoadPriority::Medium;
-    case 3:
+    case 2:
         return ResourceLoadPriority::High;
-    case 4:
+    case 3:
         return ResourceLoadPriority::VeryHigh;
     default:
         ASSERT_NOT_REACHED();
@@ -60,17 +60,18 @@ inline ResourceLoadPriority toResourceLoadPriority(CFURLRequestPriority priority
 
 inline CFURLRequestPriority toPlatformRequestPriority(ResourceLoadPriority priority)
 {
+    // FIXME: switch VeryLow back to 0 priority when CFNetwork fixes <rdar://problem/56621205>
     switch (priority) {
     case ResourceLoadPriority::VeryLow:
-        return 0;
+        return -1;
     case ResourceLoadPriority::Low:
-        return 1;
+        return 0;
     case ResourceLoadPriority::Medium:
-        return 2;
+        return 1;
     case ResourceLoadPriority::High:
-        return 3;
+        return 2;
     case ResourceLoadPriority::VeryHigh:
-        return 4;
+        return 3;
     }
 
     ASSERT_NOT_REACHED();
